--- a/src/main/resources/i18n/Messages_ca.properties
+++ b/src/main/resources/i18n/Messages_ca.properties
@@ -7,11 +7,13 @@ login.success=Èxit
 login.errorMessage=Nom d'usuari o contrasenya incorrectes
 login.successMessage=Benvingut/da {0}
 main.records=Ingressos/Despeses registrats
+main.records1=Última transacció
 main.total=TOTAL
 main.income=INGRÉS
 main.expense=DESPESA
 main.details=Detalls
 main.undo=Desfer
+main.undo1=Última transacció desfeta
 main.amount=00.00
 main.concept=Concepte
 main.config=Configuració
@@ -35,3 +37,7 @@ account.username=Nom d'Usuari
 account.password=Contrasenya
 account.changeUsername=Canviar Usuari
 account.changePassword=Canviar Contrasenya
+config.currency=Moneda
+config.euro=Euro
+config.dollar=Dòlar
+config.pound=Lliura
