--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -7,11 +7,13 @@ login.success=Success
 login.errorMessage=Incorrect username or password
 login.successMessage=Welcome {0}
 main.records=Registered Incomes/Expenses
+main.records1=Last transaction
 main.total=TOTAL
 main.income=INCOME
 main.expense=EXPENSE
 main.details=Details
 main.undo=Undo
+main.undo1=Last transaction undone
 main.amount=00.00
 main.concept=Concept
 main.config=Settings
@@ -35,4 +37,9 @@ account.username=Username
 account.password=Password
 account.changeUsername=Change Username
 account.changePassword=Change Password
+config.currency=Currency
+config.euro=Euro
+config.dollar=Dollar
+config.pound=Pound
+
 
