--- a/src/main/resources/i18n/Messages_es.properties
+++ b/src/main/resources/i18n/Messages_es.properties
@@ -7,11 +7,13 @@ login.success=Éxito
 login.errorMessage=Usuario o contraseña incorrectos
 login.successMessage=Bienvenido/a {0}
 main.records=Ingresos/Gastos registrados
+main.records1=Última transacción
 main.total=TOTAL
 main.income=INGRESO
 main.expense=GASTO
 main.details=Detalles
 main.undo=Deshacer
+main.undo1=Última transacción deshecha
 main.amount=00.00
 main.concept=Concepto
 main.config=Configuración
@@ -35,5 +37,10 @@ account.username=Nombre de Usuario
 account.password=Contraseña
 account.changeUsername=Cambiar Usuario
 account.changePassword=Cambiar Contraseña
+config.currency=Divisa
+config.euro=Euro
+config.dollar=Dólar
+config.pound=Libra
+
 
 
