--- a/src/main/resources/i18n/Messages_ca.properties
+++ b/src/main/resources/i18n/Messages_ca.properties
@@ -12,6 +12,7 @@ main.total=TOTAL
 main.income=INGRÉS
 main.expense=DESPESA
 main.details=Detalls
+main.error=Introdueix una quantitat vàlida 
 main.undo=Desfer
 main.undo1=Última transacció desfeta
 main.amount=00.00
