--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -12,6 +12,7 @@ main.total=TOTAL
 main.income=INCOME
 main.expense=EXPENSE
 main.details=Details
+main.error=Enter valid amount
 main.undo=Undo
 main.undo1=Last transaction undone
 main.amount=00.00
