--- a/src/main/resources/i18n/Messages_es.properties
+++ b/src/main/resources/i18n/Messages_es.properties
@@ -14,6 +14,7 @@ main.expense=GASTO
 main.details=Detalles
 main.undo=Deshacer
 main.undo1=Última transacción deshecha
+main.error=Introduce una cantidad válida
 main.amount=00.00
 main.concept=Concepto
 main.config=Configuración
