--- a/src/main/resources/i18n/Messages_ca.properties
+++ b/src/main/resources/i18n/Messages_ca.properties
@@ -32,12 +32,12 @@ details.time=Hora
 details.date=Data
 details.total=Total
 details.showCart=Gràfic
-details.chartTitle=Gràfic de Capital
-details.chartMessage=Aquesta funcionalitat s'implementarà aviat
 details.capital=Capital
 details.capitalProgress=Progrés del Capital
 details.dailyTotal=Total Diari
 details.details=Detalls
+details.historial=Historial
+details.fecha=Hora/Data
 help.title=Ajuda
 help.fileNotFound=Arxiu d'ajuda no trobat.
 account.title=Compte
