--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -32,12 +32,12 @@ details.time=Time
 details.date=Date
 details.total=Total
 details.showCart=Graphic
-details.chartTitle=Capital Chart
-details.chartMessage=This feature will be implemented soon.
 details.capital=Capital
 details.capitalProgress=Capital Progress
 details.dailyTotal=Daily Total
 details.details=Details
+details.historial=Records
+details.fecha=Time/Date
 help.title=Help
 help.fileNotFound=Help file not found.
 account.title=Account
