--- a/src/main/resources/i18n/Messages_es.properties
+++ b/src/main/resources/i18n/Messages_es.properties
@@ -32,12 +32,12 @@ details.time=Hora
 details.date=Fecha
 details.total=Total
 details.showCart=Gráfico
-details.chartTitle=Gráfico de Capital
-details.chartMessage=Esta funcionalidad se implementará próximamente.
 details.capital=Capital
 details.capitalProgress=Progreso del Capital
 details.dailyTotal=Total Diario
 details.details=Detalles
+details.historial=Historial
+details.fecha=Hora/Fecha
 help.title=Ayuda
 help.fileNotFound=Archivo de ayuda no encontrado.
 account.title=Cuenta
