--- a/src/main/resources/i18n/Messages_es.properties
+++ b/src/main/resources/i18n/Messages_es.properties
@@ -5,7 +5,8 @@ login.registerButton=Registrarse
 login.error=Error
 login.success=Éxito
 login.errorMessage=Usuario o contraseña incorrectos
-login.successMessage=Bienvenido/a {0}
+login.successMessage=Bienvenido/a:  {0}
+login.successRegister=¡Registro exitoso! Bienvenida/a:  {0}
 main.records=Ingresos/Gastos registrados
 main.records1=Última transacción
 main.total=TOTAL
