--- a/src/main/resources/i18n/Messages_ca.properties
+++ b/src/main/resources/i18n/Messages_ca.properties
@@ -6,6 +6,7 @@ login.error=Error
 login.success=Èxit
 login.errorMessage=Nom d'usuari o contrasenya incorrectes
 login.successMessage=Benvingut/da {0}
+login.successRegister=¡Registre exitós! Benvingut/da: {0}
 main.records=Ingressos/Despeses registrats
 main.records1=Última transacció
 main.total=TOTAL
