--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -6,6 +6,7 @@ login.error=Error
 login.success=Success
 login.errorMessage=Incorrect username or password
 login.successMessage=Welcome {0}
+login.successRegister=¡Successful registration! Welcome: {0}
 main.records=Registered Incomes/Expenses
 main.records1=Last transaction
 main.total=TOTAL
