--- a/src/main/resources/i18n/Messages_ca.properties
+++ b/src/main/resources/i18n/Messages_ca.properties
@@ -1,3 +1,4 @@
+# Login
 login.username=Nom d'usuari
 login.password=Contrasenya
 login.loginButton=Iniciar Sessió
@@ -7,25 +8,35 @@ login.success=Èxit
 login.errorMessage=Nom d'usuari o contrasenya incorrectes
 login.successMessage=Benvingut/da {0}
 login.successRegister=¡Registre exitós! Benvingut/da: {0}
+
+# Main
 main.records=Ingressos/Despeses registrats
 main.records1=Última transacció
 main.total=TOTAL
 main.income=INGRÉS
 main.expense=DESPESA
 main.details=Detalls
-main.error=Introdueix una quantitat vàlida 
 main.undo=Desfer
 main.undo1=Última transacció desfeta
+main.error=Introdueix una quantitat vàlida
 main.amount=00.00
 main.concept=Concepte
 main.config=Configuració
 main.account=Compte
 main.help=Ajuda
 main.title=PersonalBankAccount
+
+# Configuració
 config.language=Idioma
 config.spanish=Espanyol
 config.english=Anglès
 config.catalan=Català
+config.currency=Moneda
+config.euro=Euro
+config.dollar=Dòlar
+config.pound=Lliura
+
+# Detalls de Transaccions
 details.title=Detalls de Transaccions
 details.amount=Quantitat
 details.concept=Concepte
@@ -39,14 +50,21 @@ details.dailyTotal=Total Diari
 details.details=Detalls
 details.historial=Historial
 details.fecha=Hora/Data
+
+# Ajuda
 help.title=Ajuda
 help.fileNotFound=Arxiu d'ajuda no trobat.
+
+# Compte
 account.title=Compte
 account.username=Nom d'Usuari
 account.password=Contrasenya
 account.changeUsername=Canviar Usuari
+account.newUsernameConfirmation=Confirmació nou usuari
+account.newPasswordOld=Contrasenya actual
 account.changePassword=Canviar Contrasenya
-config.currency=Moneda
-config.euro=Euro
-config.dollar=Dòlar
-config.pound=Lliura
+account.newUsername=Nou nom d'usuari
+account.newPassword=Nova contrasenya
+account.newPasswordRepeat=Repeteixi la nova contrasenya
+account.save=Guardar
+account.cancel=Cancel·lar
