--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -1,3 +1,4 @@
+# Login
 login.username=Username
 login.password=Password
 login.loginButton=Login
@@ -7,25 +8,35 @@ login.success=Success
 login.errorMessage=Incorrect username or password
 login.successMessage=Welcome {0}
 login.successRegister=¡Successful registration! Welcome: {0}
+
+# Main
 main.records=Registered Incomes/Expenses
 main.records1=Last transaction
 main.total=TOTAL
 main.income=INCOME
 main.expense=EXPENSE
 main.details=Details
-main.error=Enter valid amount
 main.undo=Undo
 main.undo1=Last transaction undone
+main.error=Enter valid amount
 main.amount=00.00
 main.concept=Concept
 main.config=Settings
 main.account=Account
 main.help=Help
 main.title=PersonalBankAccount
+
+# Settings
 config.language=Language
 config.spanish=Spanish
 config.english=English
-config.catalan=Catalán
+config.catalan=Catalan
+config.currency=Currency
+config.euro=Euro
+config.dollar=Dollar
+config.pound=Pound
+
+# Transaction Details
 details.title=Transaction Details
 details.amount=Amount
 details.concept=Concept
@@ -39,16 +50,21 @@ details.dailyTotal=Daily Total
 details.details=Details
 details.historial=Records
 details.fecha=Time/Date
+
+# Help
 help.title=Help
 help.fileNotFound=Help file not found.
+
+# Account
 account.title=Account
 account.username=Username
 account.password=Password
 account.changeUsername=Change Username
 account.changePassword=Change Password
-config.currency=Currency
-config.euro=Euro
-config.dollar=Dollar
-config.pound=Pound
-
-
+account.newUsername=New Username
+account.newUsernameConfirmation=Confirm mew username
+account.newPasswordOld=Actual password
+account.newPassword=New Password
+account.newPasswordRepeat=Repeat new password
+account.save=Save
+account.cancel=Cancel
