--- a/src/main/resources/i18n/Messages_es.properties
+++ b/src/main/resources/i18n/Messages_es.properties
@@ -1,3 +1,4 @@
+# Login
 login.username=Nombre de usuario
 login.password=Contraseña
 login.loginButton=Iniciar Sesión
@@ -5,8 +6,10 @@ login.registerButton=Registrarse
 login.error=Error
 login.success=Éxito
 login.errorMessage=Usuario o contraseña incorrectos
-login.successMessage=Bienvenido/a:  {0}
-login.successRegister=¡Registro exitoso! Bienvenida/a:  {0}
+login.successMessage=Bienvenido/a: {0}
+login.successRegister=¡Registro exitoso! Bienvenida/a: {0}
+
+# Main
 main.records=Ingresos/Gastos registrados
 main.records1=Última transacción
 main.total=TOTAL
@@ -22,10 +25,18 @@ main.config=Configuración
 main.account=Cuenta
 main.help=Ayuda
 main.title=PersonalBankAccount
+
+# Configuración
 config.language=Idioma
 config.spanish=Español
 config.english=Inglés
 config.catalan=Catalán
+config.currency=Divisa
+config.euro=Euro
+config.dollar=Dólar
+config.pound=Libra
+
+# Detalles de Transacciones
 details.title=Detalles de Transacciones
 details.amount=Cantidad
 details.concept=Concepto
@@ -39,17 +50,21 @@ details.dailyTotal=Total Diario
 details.details=Detalles
 details.historial=Historial
 details.fecha=Hora/Fecha
+
+# Ayuda
 help.title=Ayuda
 help.fileNotFound=Archivo de ayuda no encontrado.
+
+# Cuenta
 account.title=Cuenta
 account.username=Nombre de Usuario
 account.password=Contraseña
 account.changeUsername=Cambiar Usuario
 account.changePassword=Cambiar Contraseña
-config.currency=Divisa
-config.euro=Euro
-config.dollar=Dólar
-config.pound=Libra
-
-
-
+account.newUsername=Nuevo nombre de usuario
+account.newUsernameConfirmation=Confirme nuevo nombre de usuario
+account.newPasswordOld=Contraseña actual
+account.newPassword=Nueva contraseña
+account.newPasswordRepeat=Repita la nueva contraseña
+account.save=Guardar
+account.cancel=Cancelar
