--- a/src/main/resources/i18n/Messages_es.properties
+++ b/src/main/resources/i18n/Messages_es.properties
@@ -62,9 +62,17 @@ account.password=Contraseña
 account.changeUsername=Cambiar Usuario
 account.changePassword=Cambiar Contraseña
 account.newUsername=Nuevo nombre de usuario
-account.newUsernameConfirmation=Confirme nuevo nombre de usuario
+account.newUsernameConfirmation=Confirme nombre de usuario
 account.newPasswordOld=Contraseña actual
 account.newPassword=Nueva contraseña
 account.newPasswordRepeat=Repita la nueva contraseña
 account.save=Guardar
 account.cancel=Cancelar
+account.userError1=Los campos de texto no pueden estar vacíos
+account.userError2=El nuevo nombre de usuario debe coincidir
+account.userError3=El nuevo nombre de usuario no puuede ser igual al actual
+account.userError4=El nombre de usuario ya existe
+account.userUpdated=Nombre de usuario actualizado con éxito
+account.passwordError1=Contraseña actual incorrecta
+account.passwordError2=La nueva contraseña debe coincidir
+account.passwordUpdated=Contraseña actualizada con éxito
