--- a/src/main/resources/i18n/Messages_ca.properties
+++ b/src/main/resources/i18n/Messages_ca.properties
@@ -66,5 +66,13 @@ account.changePassword=Canviar Contrasenya
 account.newUsername=Nou nom d'usuari
 account.newPassword=Nova contrasenya
 account.newPasswordRepeat=Repeteixi la nova contrasenya
+account.userError1=Els camps de text no poden estar buits
+account.userError2=El nou nom d'usuari ha de coincidir
+account.userError3=El nou nom d'usuari no pot ser igual al nom actual
+account.userError4=El nom d'usuari ja existeix
+account.userUpdated=Nom d'usuari actualitzat amb èxit
+account.passwordError1=Contrasenya actual incorrecta
+account.passwordError2=La nova contrasenya ha de coincidir
+account.passwordUpdated=Contrasenya actualitzada amb èxit
 account.save=Guardar
 account.cancel=Cancel·lar
