--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -66,5 +66,13 @@ account.newUsernameConfirmation=Confirm mew username
 account.newPasswordOld=Actual password
 account.newPassword=New Password
 account.newPasswordRepeat=Repeat new password
+account.userError1=The text fields cannot be empty
+account.userError2=The new username must match
+account.userError3=The new username cannot be the same as the current one
+account.userError4=The username already exists
+account.userUpdated=Username updated successfully
+account.passwordError1=Incorrect current password
+account.passwordError2=The new password must match
+account.passwordUpdated=Password updated successfully
 account.save=Save
 account.cancel=Cancel
